--- a/SimpleDotNetOpenAiChat/SimpleDotNetOpenAiChat.csproj
+++ b/SimpleDotNetOpenAiChat/SimpleDotNetOpenAiChat.csproj
@@ -4,12 +4,29 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>SimpleDotNetOpenAiChat</PackageId>
+    <Version>1.0.0-alpha.2</Version>
+    <Authors>Max Szczurek</Authors>
+    <Company>Cass Ave Consulting</Company>
+    <Description>A .NET library for integrating a streaming AI chatbot with Azure SignalR and OpenAI.</Description>
+    <PackageTags>SignalR;OpenAI;Chatbot;AI</PackageTags>
+    <RepositoryUrl>https://github.com/blurred83/SimpleDotNetOpenAiChat</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/blurred83/SimpleDotNetOpenAiChat</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.28.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
     <PackageReference Include="OpenAI" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="icon.png" Pack="true" PackagePath="" />
+    <None Include="../Readme.md" Pack="true" PackagePath="README.md" />
   </ItemGroup>
 
 </Project>
